# image_processor

./: CMakeLists.txt  base_filter.cpp  base_filter.h  bmp_reader.cpp  bmp_reader.h  bmp_writer.cpp  bmp_writer.h  cmd_parser.cpp  cmd_parser.h  crop_filter.cpp  crop_filter.h  edge_filter.cpp  edge_filter.h  exceptions.h  grayscale_filter.cpp  grayscale_filter.h  image.cpp  image.h  image_processor  image_processor.cpp  negative_filter.cpp  negative_filter.h  pixel.cpp  pixel.h  readme.md  sharp_filter.cpp  sharp_filter.h
