add_executable(
        image_processor
        image_processor.cpp
        image.cpp
        pixel.cpp
        bmp_reader.cpp
        cmd_parser.cpp
        bmp_writer.cpp
        base_filter.cpp
        crop_filter.cpp
        crop_filter.cpp
        grayscale_filter.cpp
        negative_filter.cpp
        sharp_filter.cpp
        edge_filter.cpp
)
